--- a/src/components/pages/Section2.css
+++ b/src/components/pages/Section2.css
@@ -92,7 +92,6 @@
         display: flex;
         list-style-type: none;
         flex-direction: column;
-        gap: 15px;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
@@ -104,9 +103,11 @@
     }
 
     & .content #section1{
+        font-size: 1.8vw;
         & li{
             background-color: rgb(44, 130, 251);
             padding: 10px;
+            margin:20px;
             text-align: center;
             border-radius: 10px;
             color: white;
@@ -122,11 +123,11 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-        gap: 20px;
         margin: auto;
 
         & h2{
             font-size: 3vw;
+            margin-bottom: 15px;
         }
 
         .languages{
