--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -6,22 +6,21 @@
   
 .cards h1 {
     text-align: center;
-    width: 100vw;
-    margin-top: 50px;
+    width: fit-content;
+    margin-top: 30px;
+    margin-inline: auto;
+    margin-bottom: -22px;
+    padding-inline: 20px;
+    padding-block: 5px;
     justify-content: center;
+    position: relative;
     display: flex;
-    text-shadow: 0px 0px 20px white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-
-    & .bar2{
-      height: 2px;
-      border-radius: 2px;
-      background-color: black;
-      padding-inline: 2vw;
-      width: 22vw;
-      margin: auto;
-    }
+    font-size: 40px;
+    background: whitesmoke;
+    border: 5px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px black;
   }
   h5 {
     text-align: center;
@@ -32,13 +31,20 @@
     flex-flow: column;
     align-items: center;
     max-width: 1720px;
+    padding-inline: 25px;
     width: 90%;
     margin: 0 auto;
+    background-color: whitesmoke;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border: 3px solid black;
+    border-bottom: 0px solid transparent;
+    box-shadow: 0px 0px 5px black;
   }
   
   .cards__wrapper {
     position: relative;
-    margin: 50px 0 45px;
+    margin: 50px 0 25px;
   }
   
   .cards__items {
@@ -57,7 +63,7 @@
     display: flex;
     flex-flow: column;
     height: 100%;
-    box-shadow: 0 6px 20px rgba(38, 77, 151, 0.42);
+    box-shadow: 0 6px 40px rgba(38, 77, 151, 0.42);
     -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     border-radius: 3px;
