--- a/src/components/ProjectsPage/Projects.css
+++ b/src/components/ProjectsPage/Projects.css
@@ -34,7 +34,8 @@
             width: 50%;
             min-width: 350px;
             max-width: 1000px;
-            height: 70%;
+            max-height: 1500px;
+            height: 60%;
             margin:auto;
             justify-content: center;
             align-items: center;
@@ -45,6 +46,7 @@
             background-color: rgb(44, 44, 44);
             box-shadow: 0px 0px 30px 1px black;
             border: 5px solid  rgb(44, 44, 44);
+            scroll
 
             & #close{
                 position: absolute;
