--- a/src/components/ProjectsPage/PopUp.css
+++ b/src/components/ProjectsPage/PopUp.css
@@ -20,6 +20,7 @@
         padding-block: 10px;
         box-shadow: inset 0 0 13px black;
         border-radius: 10px;
+        overflow: hidden;
 
 
         & .image-box{
@@ -30,6 +31,7 @@
             display: block;
             height: 100%;
             width: fit-content;
+            overflow: hidden;
         }
 
         & img{
