--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -11,49 +11,35 @@
   margin-top: 10%;
 }
 
-.btn--primary {
-  background-color: var(--primary);
-  color: #242424;
-  border: 1px solid var(--primary);
-}
 
-.btn--outline {
+.btn--section{
+  color: white;
   background-color: transparent;
-  color: #fff;
-  padding: 8px 20px;
-  border: 1px solid var(--primary);
-  transition: all 0.3s ease-out;
-}
-
-.btn--medium {
-  padding: 8px 20px;
+  height: fit-content;
   font-size: 18px;
 }
 
-.btn--large {
-  padding: 12px 26px;
-  font-size: 20px;
-  
+.btn--med{
+  height: fit-content;
+  padding: 0;
+  text-shadow: 0px 0px 10px black;
 }
 
-.btn--large1 {
-  padding: 12px 26px;
-  font-size: 20px;
+.btn-mobile1{
+  margin-inline: 2.5vw;
+
+
+  &:hover .bar{
+    width: 100%;
+  }
 }
 
-.btn--large:hover,
-.btn--medium:hover {
-  transition: all 0.3s ease-out;
-  background: #fff;
-  color: #242424;
-  transition: 250ms;
-}
-
-.btn--large1:hover {
-  transition: all 0.3s ease-out;
-  background: #f8a92a;
-  outline:none;
-  border:1px solid #eabbbb ;
-  color: #242424;
-  transition: 250ms;
+.bar{
+  width: 0%;
+  margin: auto;
+  color: white;
+  background-color: white;
+  height:3px;
+  border-radius: 5px;
+  transition: 200ms;
 }
