--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -22,6 +22,7 @@
   color: #fff;
   justify-self: start;
   margin-left: 20px;
+  font-weight: bold;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
