--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -89,7 +89,7 @@
     flex-direction: column;
     position: absolute;
     background: #242222;
-    height: 50vh;
+    height: 0px;
     top:-100%;
     left: 0;
     width: 100%;
