--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -138,6 +138,12 @@
     top: 0;
     left: 0;
     transform: translate(25%, 50%);
+    justify-content: center;
+    align-items: center;
+
+    & i{
+      margin: auto;
+    }
   }
 
   .menu-icon {
