--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -16,11 +16,13 @@
   justify-content: center;
   align-items: center;
   height: 80px;
+  width: 100%;
 }
 
 .navbar-logo {
   color: #fff;
   justify-self: start;
+  position: absolute;
   margin-left: 20px;
   font-weight: bold;
   cursor: pointer;
@@ -29,7 +31,10 @@
   display: flex;
   align-items: center;
   text-shadow: 0px 0px 10px black;
+  height: fit-content;
   z-index: 3;
+  left: 0;
+  justify-content: center;
 }
 
 .fa-typo3 {
@@ -131,19 +136,6 @@
     background-color: #fff;
     color: #242424;
     border-radius: 0;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 50%);
-    justify-content: center;
-    align-items: center;
-
-    & i{
-      margin: auto;
-    }
   }
 
   .menu-icon {
